--- a/pages/home.html
+++ b/pages/home.html
@@ -26,7 +26,8 @@
     </header>
     <main>
       <section id="home">
-        <h1>Home</h1>
+        <div>
+          <h1>Home</h1>
         <p>
           This is our home page, welcome to our website how can we help you?
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. A aspernatur
@@ -34,7 +35,10 @@
           Consequatur, quasi perspiciatis excepturi ipsam numquam dolor possimus
           alias dicta vel!
         </p>
-        <img src="/images/download.jpg" alt="" />
+        </div>
+        <div>
+          <img src="/images/download.jpg" alt="" />
+        </div>
       </section>
     </main>
     <footer>@copyrite 2023 Hack-lag</footer>
