--- a/pages/home.html
+++ b/pages/home.html
@@ -25,16 +25,16 @@
       </nav>
     </header>
     <main>
-      <section id="home">
+      <section id="home" style="">
         <div>
           <h1>Home</h1>
-        <p>
-          This is our home page, welcome to our website how can we help you?
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. A aspernatur
-          atque ratione reiciendis odio? Eum facere doloribus iusto impedit!
-          Consequatur, quasi perspiciatis excepturi ipsam numquam dolor possimus
-          alias dicta vel!
-        </p>
+          <p>
+            This is our home page, welcome to our website how can we help you?
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. A
+            aspernatur atque ratione reiciendis odio? Eum facere doloribus iusto
+            impedit! Consequatur, quasi perspiciatis excepturi ipsam numquam
+            dolor possimus alias dicta vel!
+          </p>
         </div>
         <div>
           <img src="/images/download.jpg" alt="" />
