Fix: added and contributed the about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -7,9 +7,13 @@
     <title> Vishwanath's Pearls Hack-Lag Git Project Collaboration</title>
 </head>
 <body>
+
     <header style="margin-bottom: 50px; margin-top: 50px;">
+
         <nav>
+
             <ul style="list-style-type: none; display: flex; justify-content: space-between;">
+
                 <li><a href="">Home</a></li>
                 <li><a href="#aboutpage">About</a></li>
                 <li><a href="">Contact</a></li>
@@ -20,18 +24,40 @@
                 <li><a href="">News</a></li>
                 <li><a href="">Challenges</a></li>
                 <li><a href="">Products</a></li>
+
             </ul>
+
         </nav>
+
     </header>
-    <main style="margin-top: 100px; margin-bottom: 100px;">
+
+    <main style="margin: 100px 50px;">
+
         <section id="aboutpage">
-            <img src="/images/About page hackatoon image.jpg" alt="This picture shows different web programming languages" width="300" height="200">
-            <p>Join us as we introduce our maiden edition of hack-lag 2023 hackathon by Vishwanath's Pearls to build solutions for new Start-ups, Healthcare, Agriculture, Business development and Employment.
-            Vishwanath's Pearls cohorts at GOMYCODE is organizing not just a hackathon in Lagos. Unlike other Hackathons, we follow up, match participants to companies and mentor and fund the projects. </p>
+
+            <div style="display: flex; justify-content: center;">
+
+                <img src="/images/About page hackatoon image.jpg" alt="This picture shows different web programming languages" width="300" height="200" style="margin: 0px 30px;">
+                <img src="/images/About page hackathon image 2.jpg" alt="This a scrabble hackathon image" width="300" height="200" style="margin: 0px 30px;">
+
+            </div>
+
+            <div style="line-height: 1.5rem; margin: 30px 0px;">
+
+                <p><span style="margin-left: 20px;">Join</span>  us as we introduce our maiden edition of hack-lag 2023 hackathon by Vishwanath's Pearls to build solutions for new Start-ups, Healthcare, Agriculture, Business development and Employment.
+                Vishwanath's Pearls cohorts at GOMYCODE is organizing not just a hackathon in Lagos. Unlike other Hackathons, we follow up, match participants to companies and mentor and fund the projects.</p>
+
+            </div>
+
         </section>
+
     </main>
+
     <footer style="margin-top: 100px; margin-bottom: -150px; text-align: center;">
+
         <small>&copy hack-lag 2023</small>
+
     </footer>
+
 </body>
 </html>
