--- a/pages/home.html
+++ b/pages/home.html
@@ -7,23 +7,7 @@
     <title>Home</title>
   </head>
   <body>
-    <header>
-      <img src="/images/download (1).png" alt="" />
-      <nav>
-        <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact us</a></li>
-          <li><a href="#event">Event</a></li>
-          <li><a href="#speaker">Speakers</a></li>
-          <li><a href="#price">Price/Award</a></li>
-          <li><a href="#blog">Blog</a></li>
-          <li><a href="#news">News</a></li>
-          <li><a href="#challenges">Challenges</a></li>
-          <li><a href="#products">Products</a></li>
-        </ul>
-      </nav>
-    </header>
+    <header></header>
     <main>
       <section id="home" style="">
         <div>
