--- a/pages/demo.html
+++ b/pages/demo.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo page</title>
 </head>
+
 <body>
     <h1>Welcome to demo page</h1>
+    <form action="https://formspree.io/f/xwkjnvar" method="POST">
+        <label for="fname">firstname</label><br>
+        <input type="text" id="fname" name="fname" placeholder="firstname"><br>
+
+        <label for="lname">lastname</label><br>
+        <input type="text" id="lname" name="lname" placeholder="lastname"><br>
+
+        <label for="email">Email</label><br>
+        <input type="text" id="fname" name="email" placeholder="email"><br>
+
+        <label for="password">Password</label><br>
+        <input type="password" id="fname" name="password" placeholder="password"><br>
+
+        <input type="submit" value="submit">
+    </form>
+
 </body>
+
 </html>
